<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".profile">

    <EditText
        android:id="@+id/editText14"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/About_me"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="624dp" />

    <EditText
        android:id="@+id/editText13"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/Experience"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="567dp" />

    <EditText
        android:id="@+id/editText9"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/mobile"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="456dp" />

    <EditText
        android:id="@+id/editText10"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/Education"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="510dp" />

    <EditText
        android:id="@+id/editText8"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/Date_of_Birth"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="402dp" />

    <EditText
        android:id="@+id/editText6"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/Last_name"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="243dp" />

    <EditText
        android:id="@+id/editText7"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/Gender"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="300dp" />

    <EditText
        android:id="@+id/editText11"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/Address"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="348dp" />

    <EditText
        android:id="@+id/editText5"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="41dp"
        android:hint="@string/first_name"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="188dp" />

    <Button
        android:id="@+id/register_button3"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:contentDescription="@string/Save"
        android:shadowColor="#D78FFE"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/Save"
        android:textColor="#1a436e"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="714dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="153dp"
        android:layout_height="119dp"
        app:srcCompat="@drawable/face_icon"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>