<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messages_background_esb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:contentDescription="@string/Image_lady"
    tools:context=".messages">

    <TextView
        android:id="@+id/mysitters_textView_epb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="messages page"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/Message"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/message0"
        app:layout_constraintStart_toStartOf="@+id/textView_nathan"
        app:layout_constraintTop_toBottomOf="@+id/textView_nathan" />

    <View
        android:id="@+id/messages_divider17_esb"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mysitters_textView_epb" />

    <View
        android:id="@+id/messages_divider16_esb"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_pai_dog" />

    <View
        android:id="@+id/messages_divider25_esb"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_man" />

    <View
        android:id="@+id/messages_divider26_esb"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_lady" />

    <TextView
        android:id="@+id/textView_nathan"
        android:layout_width="116dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/Nathan"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Nathan_"
        app:layout_constraintStart_toEndOf="@+id/image_pai_dog"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider17_esb"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView_andre"
        android:layout_width="170dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/Andre"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Alexa"
        app:layout_constraintStart_toEndOf="@+id/image_man"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider16_esb"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView_resposta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/message1"
        app:layout_constraintStart_toStartOf="@+id/textView_andre"
        app:layout_constraintTop_toBottomOf="@+id/textView_andre" />

    <TextView
        android:id="@+id/textView_alexandra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Andre_"
        app:layout_constraintStart_toEndOf="@+id/image_lady"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider25_esb" />

    <View
        android:id="@+id/messages_divider30_esb"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="220dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider26_esb" />

    <ImageButton
        android:id="@+id/home_imageButton_esb"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/home_icon"
        android:onClick="startHome3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider30_esb"
        app:srcCompat="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/requests_imageBfutton_esb"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/event_icon"
        android:onClick="startRequests3"
        app:layout_constraintStart_toEndOf="@+id/home_imageButton_esb"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider30_esb"
        app:srcCompat="@drawable/event_icon" />

    <ImageButton
        android:id="@+id/message_imageButton_esb"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/email_icon"
        app:layout_constraintStart_toEndOf="@+id/requests_imageBfutton_esb"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider30_esb"
        app:srcCompat="@drawable/mail_icon" />

    <ImageButton
        android:id="@+id/profile_imageButton_esb"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/person_icon"
        android:onClick="startProfile3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/message_imageButton_esb"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider30_esb"
        app:srcCompat="@drawable/person_icon" />

    <ImageView
        android:id="@+id/image_pai_dog"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/Nathan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider17_esb"
        app:srcCompat="@drawable/pai_e_c_ozinho" />

    <ImageView
        android:id="@+id/image_man"
        android:layout_width="121dp"
        android:layout_height="124dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/Alex"
        app:layout_constraintStart_toStartOf="@+id/messages_divider16_esb"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider16_esb"
        app:srcCompat="@drawable/filha_e_m_e_de_100_anos" />

    <ImageView
        android:id="@+id/image_lady"
        android:layout_width="121dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/Andre"
        app:layout_constraintStart_toStartOf="@+id/messages_divider25_esb"
        app:layout_constraintTop_toBottomOf="@+id/messages_divider25_esb"
        app:srcCompat="@drawable/pai_e_filho" />

    <Button
        android:id="@+id/button_esb"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="208dp"
        android:layout_height="65dp"
        android:onClick="startChatS"
        android:text="@string/that_is"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView_alexandra"
        app:layout_constraintTop_toBottomOf="@+id/textView_alexandra" />

</androidx.constraintlayout.widget.ConstraintLayout>