<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/par_cli_background_e"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Parent_client_choice">

    <Button
        android:id="@+id/sitter_burtton_e"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/buttonshape"
        android:backgroundTint="#F3E5F5"
        android:contentDescription="@string/contentDescription_sitter"
        android:fontFamily="@font/allerta_stencil"
        android:onClick="startSitter"
        android:shadowColor="#FCE4EC"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/sitter"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#1e1e1e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/parent_button_e"
        app:layout_constraintStart_toStartOf="@+id/parent_button_e"
        app:layout_constraintTop_toBottomOf="@+id/parent_button_e" />



    <Button
        android:id="@+id/parent_button_e"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/buttonshape"
        android:backgroundTint="#1e1e1e"
        android:contentDescription="@string/contentDescription_parent"
        android:fontFamily="@font/allerta_stencil"
        android:onClick="startParent"
        android:shadowColor="#FCE4EC"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/parent"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#1e1e1e"
        app:layout_constraintBottom_toTopOf="@+id/sitter_burtton_e"
        app:layout_constraintEnd_toEndOf="@+id/logo_image_e"
        app:layout_constraintStart_toStartOf="@+id/logo_image_e"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_e" />



    <ImageView
        android:id="@+id/logo_image_e"
        android:layout_width="match_parent"
        android:layout_height="534dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/parent_button_e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/the_sitter_3" />


</androidx.constraintlayout.widget.ConstraintLayout>