<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".register">

    <EditText
        android:id="@+id/editText4"
        style="@style/Edit_Text"
        android:layout_width="315dp"
        android:layout_height="74dp"
        android:hint="@string/app_user_confirm"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="525dp" />

    <EditText
        android:id="@+id/editText3"
        style="@style/Edit_Text"
        android:layout_width="315dp"
        android:layout_height="74dp"
        android:hint="@string/app_password"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="435dp" />

    <EditText
        android:id="@+id/editText2"
        style="@style/Edit_Text"
        android:layout_width="315dp"
        android:layout_height="74dp"
        android:hint="@string/app_user_email"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="337dp" />

    <EditText
        android:id="@+id/editText"
        style="@style/Edit_Text"
        android:layout_width="315dp"
        android:layout_height="74dp"
        android:hint="@string/app_user"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="245dp" />

    <Button
        android:id="@+id/register_button2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonshape"
        android:contentDescription="@string/app_button_register"
        android:shadowColor="#D78FFE"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/app_button_register"
        android:textColor="#1a436e"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="726dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:background="#FFFFFF"
        android:text="@string/app_logo"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="77dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="532dp"
        android:layout_height="178dp"
        android:layout_marginTop="53dp"
        android:text="@string/app_text1"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/person_icon"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="269dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mail_icon"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="363dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lock_icon"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="463dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lock_icon"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="548dp" />

</androidx.constraintlayout.widget.ConstraintLayout>