<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:padding="8dp">


    <ImageView
        android:id="@+id/my_Family_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/my_Family_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/my_Family_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_Family_Bdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/Date_of_Birth"
        app:layout_constraintStart_toEndOf="@+id/my_Family_image"
        app:layout_constraintTop_toBottomOf="@+id/my_Family_name" />

    <ImageButton
        android:id="@+id/my_Family_button"
        android:layout_width="69dp"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_contentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_pen_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>